--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,3 +24,5 @@ jobs:
         # if: github.ref == 'refs/heads/main'
         run: echo "ENV_NAME=prod" >> $GITHUB_ENV
       - uses: actions/checkout@v2
+
+      - run: docker-compose up -d --build app web
