--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,3 +26,5 @@ jobs:
       - uses: actions/checkout@v2
 
       - run: docker-compose up -d --build app web
+
+      - run: docker-compose exec -T app composer install -n --prefer-dist --no-dev
